# elo_package

./: Player Rating.ipynb  README.md  player_tournament_results_2019_downsampled_15_prc.csv  setup.cfg  setup.py
src/elopackage/: elo.py  player.py  preprocess.py  results.py
