[metadata]
name = elopackage
version = 0.0.1
author = Ben Farrell
author_email = ben.farrell08@gmail.com
description = Player Rating Algorithm
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires =
  numpy
  pandas
  scipy
  matplotlib
  pathlib

[options.packages.find]
where = src